     Drucken, sondern zum Mahnbericht f. die entsprechende Mahnung
   - der Attachment-Name der Mahnrechnung (mit den Gebühren) enthält
     jetzt die Rechnungsnummer und nicht mehr die Mahnungsnummer
   - Verknüpfung der Mahnungen mit E-Mail-Journal evtl. verschickter
     Mails
   - Anzeige der Mails im Mahnbericht
   - DB-Trigger zum Löschen von Verknüpfungen beim Löschen einer
     Mahnung

Kleinere neue Features und Detailverbesserungen:
  - Der Status geliefert bei Aufträgen kann mit oder ohne Dienstleistungen
    im Lieferschein berechnet werden. Einstellbar in der Mandantenkonfiguration
    jeweils unabhängig für Einkauf und Verkauf.
    Standardeinstellung: Dienstleistungen sind lagerbar.
  - Gefertigte Erzeugnisse können innerhalb des Zurücklagerungszeitraums
    wieder zerlegt werden. Die Aktion befindet sich im Lagerbuchungsbericht
  - E-Mail-Versand: Neben dem Freitext CC-Feld kann jetzt auch ein
    kivitendo Benutzer mittels einer Auswahlliste in CC gesetzt werden
  - Falls der Mandant zu jeder Buchung einen Beleg hinzufügen möchte,
    ist dies jetzt in der Mandantenkonfiguration einstellbar und falls
    zusätzlich die DMS Funktion aktiv ist, bleibt der Bearbeiter nach
    dem  Erfassen einer Buchung in der Maske und kann einen Beleg hinzufügen
 - Ausgelagerte Lieferscheinen können zurückgelagerte werden insofern der
   konfigurierbare Zurücklagerungszeitraum noch nicht überschritten ist.
 - Angebote und Aufträge im Ein- und Verkauf können optionale Positionen enthalten.
   Optionale Positionen werden in der zweiten Zeile der Position aktiviert.
   Die einzelne Position wird dann berechnet und erscheint im Ausdruck mit dem
   berechnetem Preis, die Position wird aber nicht in der Gesamtsumme des Belegs
   aufgenommen. Dies gilt auch für die Gesamt-Marge und den Gesamt-Ertrag des Belegs.
   Innerhalb der Druckvorlagen steht das Attribut mit <%optional%> als Variable zu Verfügung.