@@ -29,6 +29,7 @@ $self->{texts} = {
   '%'                           => '%',
   '(recommended) Insert the used currencies in the system. You can simply change the name of the currencies by editing the textfields above. Do not use a name of a currency that is already in use.' => '(empfohlen) Fügen Sie die verwaisten Währungen in Ihr System ein. Sie können den Namen der Währung einfach ändern, indem Sie die Felder oben bearbeiten. Benutzen Sie keine Namen von Währungen, die Sie bereits benutzen.',
   '*/'                          => '*/',
+  '+'                           => '+',
   ', if set'                    => ', falls gesetzt',
   '---please select---'         => '---bitte auswählen---',
   '. Automatically generated.'  => '. Automatisch erzeugt.',
@@ -746,6 +747,7 @@ $self->{texts} = {
   'Create a new client'         => 'Einen neuen Mandanten anlegen',
   'Create a new delivery term'  => 'Neue Lieferbedingungen anlegen',
   'Create a new group'          => 'Neue Benutzergruppe erfassen',
+  'Create a new part'           => 'Einen neuen Artikel anlegen',
   'Create a new payment term'   => 'Neue Zahlungsbedingungen anlegen',
   'Create a new price rule'     => 'Neue Preisregel anlegen',
   'Create a new printer'        => 'Einen neuen Drucker anlegen',
@@ -4129,6 +4131,7 @@ $self->{texts} = {
   'Yes'                         => 'Ja',
   'Yes, included by default'    => 'Ja, standardmäßig an',
   'Yes/No (Checkbox)'           => 'Ja/Nein (Checkbox)',
+  'You are adding a new part while you are editing another document. You will be redirected to your document when saving the new part or aborting this form.' => 'Sie legen einen neuen Artikel an, während Sie ein anderes Dokument bearbeiten. Sie werden zu Ihrem Dokument zurückgeleitet, wenn Sie den Artikel speichern oder die Bearbeitung dieser Maske abbrechen.',
   'You are logged out!'         => 'Auf Wiedersehen!',
   'You can also delete this transaction and re-enter it manually.' => 'Alternativ können Sie die Buchung auch mit löschen lassen und sie anschließend neu eingeben.',
   'You can choose account categories for taxes. Depending on these categories taxes will be displayed for transfers in the general ledger or not.' => 'Sie können Kontoarten für Steuern auswählen. Abhängig von diesen Kontoarten werden dann Steuern bei Dialogbuchungen angezeigt oder nicht.',
