@@ -29,6 +29,7 @@ $self->{texts} = {
   '%'                           => '',
   '(recommended) Insert the used currencies in the system. You can simply change the name of the currencies by editing the textfields above. Do not use a name of a currency that is already in use.' => '',
   '*/'                          => '',
+  '+'                           => '',
   ', if set'                    => '',
   '---please select---'         => '',
   '. Automatically generated.'  => '',
@@ -746,6 +747,7 @@ $self->{texts} = {
   'Create a new client'         => '',
   'Create a new delivery term'  => '',
   'Create a new group'          => '',
+  'Create a new part'           => '',
   'Create a new payment term'   => '',
   'Create a new price rule'     => '',
   'Create a new printer'        => '',
@@ -4128,6 +4130,7 @@ $self->{texts} = {
   'Yes'                         => '',
   'Yes, included by default'    => '',
   'Yes/No (Checkbox)'           => '',
+  'You are adding a new part while you are editing another document. You will be redirected to your document when saving the new part or aborting this form.' => '',
   'You are logged out!'         => '',
   'You can also delete this transaction and re-enter it manually.' => '',
   'You can choose account categories for taxes. Depending on these categories taxes will be displayed for transfers in the general ledger or not.' => '',
